@@ -21,6 +21,7 @@ my $build = ModuleBuildBuilder->new(
   module_name => 'Module::Build',
   license     => 'perl',
   build_requires        => {
+    'File::Temp'            => 0.15,    # tmpdir() + fixes
     'Test::More'            => 0.49,
     'Test::Harness'         => 2.03,    # when TODO tests worked
   },
